# mpsgraph-rs

./: .gitignore  CLAUDE.md  Cargo.toml  MPSGraphConvenienceExtensions.md  MPSGraph_Implementation_Plan.md  MPSGraph_Migration_Plan.md  README.md  SugarAPIProgress.md  TODO.md  build.rs  fix_msg_send_commas.py
.github/workflows/: macos-tests.yml
crates/mpsgraph-rs/: Cargo.toml  README.md  build.rs
crates/mpsgraph-rs/src/: activation_ops.rs  arithmetic_ops.rs  call_ops.rs  control_flow_ops.rs  convolution_ops.rs  core.rs  data_types.rs  device.rs  executable.rs  fourier_transform_ops.rs  gather_ops.rs  gradient_ops.rs  graph.rs  lib.rs  linear_algebra_ops.rs  loss_ops.rs  memory_ops.rs  non_maximum_suppression_ops.rs  non_zero_ops.rs  operation.rs  optimizer_ops.rs  pooling_ops.rs  random_ops.rs  rnn_ops.rs  scatter_nd_ops.rs  shape.rs  sort_ops.rs  stencil_ops.rs  tensor.rs  tensor_data.rs
crates/mpsgraph-rs/src/tests/: activation_ops_tests.rs  arithmetic_ops_tests.rs  command_buffer_tests.rs  core_tests.rs  graph_tests.rs  matrix_ops_tests.rs  memory_management_tests.rs  mod.rs  pooling_ops_tests.rs  reduction_ops_tests.rs  resize_ops_tests.rs  tensor_data_tests.rs  tensor_tests.rs
crates/mpsgraph-tools-rs/: Cargo.toml  README.md
crates/mpsgraph-tools-rs/examples/: tensor_ops.rs
crates/mpsgraph-tools-rs/src/: lib.rs  tensor_ops.rs
crates/mpsgraph-tools-rs/src/tests/: mod.rs  tensor_ops_tests.rs
examples/: README.md  advanced_convolutions.rs  advanced_operations.rs  callback_test.rs  coreml_example.rs  debug_tensor_data.rs  dry_run_test.rs  executable_command_buffer.rs  linear_algebra.rs  linear_algebra_test.rs  matmul.rs  metal_execution.rs  minimal_validation.rs  mock_matmul.rs  mps_command_buffer.rs  simple_compile.rs  simple_metal_test.rs  simplified_test.rs  sugar_api_example.rs  type_test.rs  using_test_mode.rs
src/: activation_ops.rs  arithmetic_ops.rs  call_ops.rs  command_buffer.rs  control_flow_ops.rs  convolution_ops.rs  convolution_transpose_ops.rs  core.rs  cumulative_ops.rs  data_types.rs  depthwise_convolution_ops.rs  device.rs  executable.rs  executable.rs.bak  foundation.rs  fourier_transform_ops.rs  gather_ops.rs  gradient_ops.rs  graph.rs  graph.rs.bak  im2col_ops.rs  lib.rs  linear_algebra_ops.rs  loss_ops.rs  matrix_inverse_ops.rs  matrix_ops.rs  memory_ops.rs  non_maximum_suppression_ops.rs  non_zero_ops.rs  normalization_ops.rs  one_hot_ops.rs  operation.rs  optimizer_ops.rs  pooling_ops.rs  quantization_ops.rs  random_ops.rs  reduction_ops.rs  resize_ops.rs  rnn_ops.rs  sample_grid_ops.rs  (+11 more)
